tests/baselines/reference/mixedStaticAndInstanceClassMembers.errors.txt
tests/cases/compiler/mixedStaticAndInstanceClassMembers.ts(4,5): error TS2387: Function overload must be static.
tests/cases/compiler/mixedStaticAndInstanceClassMembers.ts(12,12): error TS2388: Function overload must not be static.
tests/cases/compiler/mixedStaticAndInstanceClassMembers.ts(13,5): error TS2387: Function overload must be static.


==== tests/cases/compiler/mixedStaticAndInstanceClassMembers.ts (3 errors) ====
    class A {
        f() {}
        static m1 (a: string): void;
        m1 (a: number): void;
        ~~
!!! error TS2387: Function overload must be static.
        m1 (a: any): void {
        }
    }
    
    class B {
        f() {}
        m1 (a: string): void;
        static m1 (a: number): void;
               ~~
!!! error TS2388: Function overload must not be static.
        m1 (a: any): void {
        ~~
!!! error TS2387: Function overload must be static.
        }
    }